# vitjas-interactive-terminal

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
interactive_terminal/: __init__.py  __main__.py  server.py
