[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitjas-interactive-terminal"
version = "1.2.1"
description = "MCP Server providing fully interactive terminal sessions for AI agents - TUI support, keyboard control, screen capture - Cross-platform (Windows, Linux, Mac)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vltja", email = "vltja@users.noreply.github.com"}
]
keywords = ["mcp", "terminal", "ai", "agent", "pywinpty", "ptyprocess", "tui", "claude", "llm", "cross-platform", "windows"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "mcp>=1.0.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://github.com/Vltja/vitjas-interactive-terminal"
Repository = "https://github.com/Vltja/vitjas-interactive-terminal"
Issues = "https://github.com/Vltja/vitjas-interactive-terminal/issues"

[project.scripts]
vitjas-interactive-terminal = "interactive_terminal.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["interactive_terminal*"]
